# substrate

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/: COMPARISON.md  QUICKSTART.md  REBRAND.md
docs/architecture/: 16676565122689735935_rebrand-terminology-strategy.md  16676565123000000000_plexus-rpc-terminology-examples.md  16676565123400000000_plexus-rpc-ecosystem-naming.md  16677366925482194687_mobile-client-architecture.md  16677367481411526655_direct-method-transport.md  16677888172735830527_build-warnings-test-failures.md  16677890479326575615_arbor-usage-pattern.md  16677958939404136703_worktree-stack-development.md  16677960973459046655_handle-enum-codegen.md  16677963644192091647_arbor-stream-map.md  16677965632570341631_claudecode-loopback-integration.md  16678111153768723711_arbor-buffered-streaming.md  16678130375925173503_loopback-mcp-conformance-analysis.md  16678188726020813567_bidirectional-streaming.md  16678373036159325695_plugin-development-guide.md  16678638480642409727_generic-hub-context.md  16679052351859224575_template-system.md  16679052837278386687_ir-cli-implementation.md  16679068514104533503_schema-union-asymmetries.md  16679155106803598591_ir-based-cli.md  16679156416079469567_structured-params.md  16679164194740300543_unified-cli-tree.md  16679174944041108735_method-schema-spec.md  16679477965835151615_hub-architecture-layering.md  16679478365106589695_claudecode-arbor-mirroring.md  16679517135570018559_multi-hub-transport-envelope.md  16679574983150601727_arbor-per-method-types-design.md  16679591226487940607_plugin-core-extraction.md  16679600499658362623_parallel-implementation-plan.md  16679659514785209599_bidirectional-sse-transport.md  16679765992581838591_handle-plugin-id-migration.md  16679775901269181695_handle-rendering-system.md  16679831060184680703_handle-invariants.md  16679869168467720703_handle-architecture.md  16679960320421152511_nested-plugin-routing.md  16680009221656820735_recursive-schema-coalgebra.md  16680036991497604607_recursive-plugin-schema.md  16680088914848444671_hub-macro-override-call.md  16680127584921047551_universal-schema-exposure.md  16680205403394519551_mcp-to-arbor-flow.md  (+18 more)
docs/architecture/old/: 16676565123100000000_substrate-protocol-terminology-examples.md  16676565123200000000_substrate-protocol-microservices-architecture.md  16676565123300000000_protocol-naming-final-decision.md
examples/: claude_stream_test.rs  rmcp_mcp_server.rs  verify_streaming.rs
plans/ARBOR/: RENDER-1.md
plans/BIDIR/: BIDIR-1.md  BIDIR-10.md  BIDIR-2.md  BIDIR-3.md  BIDIR-4.md  BIDIR-5.md  BIDIR-6.md  BIDIR-7.md  BIDIR-8.md  BIDIR-9.md
plans/CLAUDECODE/: LOOPBACK-1.md  LOOPBACK-DEBUG.md  LOOPBACK-FINDINGS.md
plans/DISCORD/: DISCORD-1.md  DISCORD-10.md  DISCORD-11.md  DISCORD-2.md  DISCORD-3.md  DISCORD-4.md  DISCORD-5.md  DISCORD-6.md  DISCORD-7.md  DISCORD-8.md  DISCORD-9.md
plans/HANDLE/: HANDLE-1.md  HANDLE-2.md  HANDLE-3.md  HANDLE-4.md  HANDLE-5.md  HANDLE-6.md  HANDLE-7.md  HANDLE-8.md  HANDLE-9.md
plans/MCP/: MCP-1.md  MCP-10.md  MCP-11.md  MCP-12.md  MCP-13.md  MCP-14.md  MCP-15.md  MCP-2.md  MCP-3.md  MCP-4.md  MCP-5.md  MCP-6.md  MCP-7.md  MCP-8.md  MCP-9.md
src/: builder.rs  lib.rs  main.rs  mcp_bridge.rs  mcp_session.rs  types.rs
src/activations/: README.md  mod.rs
src/activations/arbor/: activation.rs  methods.rs  mod.rs  storage.rs  typed_methods.rs  types.rs
src/activations/bash/: activation.rs  methods.rs  mod.rs  types.rs
src/activations/changelog/: activation.rs  mod.rs  storage.rs  types.rs
src/activations/claudecode/: activation.rs  executor.rs  mod.rs  storage.rs  types.rs
src/mcp/: interface.rs  mod.rs  transport.rs
src/plexus/: errors.rs  guidance.rs  method.rs  method_enum.rs  middleware.rs  mod.rs  path.rs  plexus.rs  schema.rs  session_schema.rs  types.rs
src/plugin_system/: conversion.rs  mod.rs  types.rs
tests/: macro_plugin_test.rs  rpc_integration.rs
(+28 files in other folders)
