[workspace]
members = ["."]

[package]
name = "substrate"
version = "0.1.0"
edition = "2021"
description = "Backend infrastructure for LLM orchestration - plexus, activations, storage"
default-run = "substrate"

[lib]
name = "substrate"
path = "src/lib.rs"

[[bin]]
name = "substrate"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"
async-stream = "0.3"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
either = "1.9"
semantic-query = "0.2.0"
schemars = { version = "1.0.4", features = ["derive", "uuid1"] }
axum = { version = "0.7" }
tower = "0.4"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.8"
hostname = "0.3"
regex = "1.10"
# JSON-RPC server dependencies
jsonrpc-core = "18.0"
jsonrpc-stdio-server = "18.0"
jsonrpsee = { version = "0.21", features = ["server", "macros"] }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["trace", "util", "cors"] }
http = "1.0"
http-body-util = "0.1"

# LLM client
cllient = { path = "../cllient" }

# Session types for method protocols
dialectic = { version = "0.4.1", features = ["tokio"] }

[patch.crates-io]
semantic-query = { path = "../semantic-query" }

[dev-dependencies]
hyper = "1"
tower = { version = "0.5", features = ["util"] }
reqwest = { version = "0.11", features = ["json"] }
jsonrpsee = { version = "0.21", features = ["client", "ws-client"] }
tokio-tungstenite = "0.21"
